# dpvs

.github/workflows/: build.yaml  c-cpp.yml  run.yaml
conf/: dpvs.conf.items  dpvs.conf.sample  dpvs.conf.single-bond.sample
include/: inetaddr.h  uoa.h
include/ipvs/: dest.h  service.h
patch/dpdk-stable-20.11.1/: 0001-kni-use-netlink-event-for-multicast-driver-part.patch  0002-enable-pdump-and-change-dpdk-pdump-tool-for-dpvs.patch  0004-ixgbe_flow-patch-ixgbe-fdir-rte_flow-for-dpvs.patch  0005-Fix-bonding-mode-4-problem-caused-by-LACP-failure.patch
src/: Makefile  inetaddr.c  kni.c  meson.build  neigh.c  netif.c  route.c
src/ipv6/: meson.build
src/ipvs/: ip_vs_conn.c  ip_vs_proto_udp.c  ip_vs_xmit.c  meson.build
src/ipvs/libconhash/: meson.build
src/tc/: meson.build
tools/ipvsadm/: ipvsadm.c
tools/keepalived/keepalived/libipvs-2.6/: libipvs.c
