subdir('libconhash')

sources += files('ip_vs_wlc.c',
           'ip_vs_proto_icmp.c',
           'ip_vs_laddr.c',
           'ip_vs_conn.c',
           'ip_vs_conhash.c',
           'siphash.c',
           'ip_vs_proto.c',
           'kcompat.c',
           'ip_vs_service.c',
           'ip_vs_mh.c',
           'ip_vs_synproxy.c',
           'ip_vs_sched.c',
           'ip_vs_wrr.c',
           'ip_vs_proto_tcp.c',
           'ip_vs_xmit.c',
           'ip_vs_core.c',
           'ip_vs_nat64.c',
           'ip_vs_redirect.c',
           'ip_vs_blklst.c',
           'ip_vs_whtlst.c',
           'ip_vs_dest.c',
           'ip_vs_rr.c',
           'ip_vs_fo.c',
           'ip_vs_proto_udp.c',
           'ip_vs_stats.c',
)
